Add a missing break statement, which made the code default to IPv6.

PR:		201285
Submitted by:	David Binderman
MFC after:	1 week

Former-commit-id: 01bc1947d39ef5ecd12491702ede159946e303d8